Addressed compilation errors and refactored
Refactored to increase maintainability